# acme-ssl-manager

./: .gitignore  CLAUDE.md  function_app.py  host.json  pyproject.toml
src/cert_manager/: acme_client.py  auth.py  config.py  keyvault.py  models.py
src/cert_manager/dns/: __init__.py  azure_dns.py  base.py  cloudflare.py  util.py
tests/: conftest.py  test_acme_client.py  test_config.py  test_dns_activity.py  test_dns_azure.py  test_dns_base.py  test_dns_cloudflare.py  test_dns_factory.py  test_dns_util.py  test_function_app.py  test_keyvault.py  test_models.py
