[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-acme-cert-manager"
version = "0.1.0"
description = "Automated SSL certificate renewal using Azure Functions, ACME protocol, and Azure Key Vault"
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.21.0",
    "azure-functions-durable>=1.2.9",
    "azure-identity>=1.17.0",
    "azure-keyvault-certificates>=4.8.0",
    "azure-mgmt-dns>=8.1.0",
    "acme>=3.0.0",
    "cryptography>=43.0.0",
    "josepy>=1.14.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
